src/validation/tests/snapshots/rusty__validation__tests__recursive_validation_tests__functionblocks__one_cycle_aba_output.snap
---
source: src/validation/tests/recursive_validation_tests.rs
expression: "&diagnostics"
---
error[E029]: Recursive data structure `A -> B -> A` has infinite size
  ┌─ <internal>:2:28
  │
2 │             FUNCTION_BLOCK A
  │                            ^
  │                            │
  │                            Recursive data structure `A -> B -> A` has infinite size
  │                            see also
  ·
9 │             FUNCTION_BLOCK B
  │                            - see also
